@@ -26,3 +26,4 @@ Joerg Mattes <joerg.mattes@nch.it>
 Andreas Goll <Andreas@goll.com>
 LaMont Jones <lamont@smallone.fc.hp.com>
 Harrie Hazewinkel <harrie@covalent.net>
+Dave Shield <D.T.Shield@csc.liv.ac.uk>
